--- a/faberlick/scss/style.scss
+++ b/faberlick/scss/style.scss
@@ -41,7 +41,7 @@ main {
     animation-name: animatetop;
     animation-duration: 0.4s;
 
-    @media (max-width: 1900px) {
+    @media (max-width: 1800px) {
       width: 50%;
     }
 
@@ -168,6 +168,14 @@ button {
   cursor: pointer;
   padding: 8px 70px;
 
+  @media (max-width: 1024px) {
+    padding: 8px 40px;
+  }
+
+  @media (max-width: 768px) {
+    padding: 5px 10px;
+  }
+
   @media (max-width: 475px) {
     padding: 5px;
   }
@@ -177,8 +185,12 @@ button {
     font-size: 36px;
     transition: all 0.3s ease-out;
 
-    @media (max-width: 1900px) {
+    @media (max-width: 1800px) {
       font-size: 28px;
+    }
+
+    @media (max-width: 768px) {
+      font-size: 14px;
     }
 
     @media (max-width: 475px) {
@@ -252,8 +264,12 @@ h3 {
 h2 {
   font-size: 72px;
 
-  @media (max-width: 1900px) {
+  @media (max-width: 1800px) {
     font-size: 55px;
+  }
+
+  @media (max-width: 768px) {
+    font-size: 24px;
   }
 
   @media (max-width: 475px) {
@@ -264,8 +280,12 @@ h2 {
 h3 {
   font-size: 48px;
 
-  @media (max-width: 1900px) {
+  @media (max-width: 1800px) {
     font-size: 36px;
+  }
+
+  @media (max-width: 768px) {
+    font-size: 22px;
   }
 
   @media (max-width: 475px) {
@@ -276,8 +296,16 @@ h3 {
 p {
   font-size: 36px;
 
-  @media (max-width: 1900px) {
+  @media (max-width: 1800px) {
     font-size: 28px;
+  }
+
+  @media (max-width: 1024px) {
+    font-size: 22px;
+  }
+
+  @media (max-width: 768px) {
+    font-size: 16px;
   }
 
   @media (max-width: 475px) {
@@ -297,11 +325,15 @@ header {
     left: 0;
     z-index: 1000;
 
+    @media (max-width: 1024px) {
+      padding: 20px;
+    }
+
     p {
       font-size: 20px;
       font-weight: 300;
 
-      @media (max-width: 1900px) {
+      @media (max-width: 1800px) {
         font-size: 0.9vw;
       }
 
@@ -311,21 +343,24 @@ header {
     }
 
     .logo {
-      @media (max-width: 1900px) {
+      @media (max-width: 1800px) {
         padding: 0 5px;
         max-width: 20%;
       }
 
+      @media (max-width: 1024px) {
+        max-width: 100%;
+      }
+
       @media (max-width: 475px) {
         padding: 0 10px;
-        max-width: 100%;
       }
     }
 
     button {
       padding: 5px 30px;
 
-      @media (max-width: 475px) {
+      @media (max-width: 1024px) {
         display: none;
       }
     }
@@ -352,7 +387,7 @@ header {
       z-index: 36;
       display: none;
 
-      @media (max-width: 475px) {
+      @media (max-width: 1024px) {
         display: block;
       }
 
@@ -390,7 +425,7 @@ header {
         }
       }
 
-      @media (max-width: 475px) {
+      @media (max-width: 1024px) {
         width: 100vw;
         height: 100vh;
         background: #fff;
@@ -443,7 +478,7 @@ header {
           align-items: center;
           transition: all 0.5s ease-out;
 
-          @media (max-width: 1900px) {
+          @media (max-width: 1800px) {
             min-width: 24px;
             min-height: 24px;
           }
@@ -454,8 +489,16 @@ header {
             font-size: 12px;
           }
 
+          @media (max-width: 1024px) {
+            min-width: 35px;
+            min-height: 35px;
+            font-size: 24px;
+          }
+
           @media (max-width: 475px) {
             font-size: 10px;
+            min-width: 10px;
+            min-height: 20px;
           }
 
           &:hover {
@@ -472,19 +515,40 @@ header {
 }
 
 main {
+  padding: 80px 0 0 0;
+
   section#main {
     background: url('../images/bg-folder/main-bg.png') no-repeat center
       top/cover;
-    padding: 170px 0 0 0;
+    min-height: 100vh;
+    padding: 70px 0 0 0;
+
+    @media (max-width: 1440px) {
+      background: url('../images/bg-folder/main-bg-1440.png') no-repeat center
+        top/cover;
+      min-height: 84vh;
+      padding: 0;
+    }
+
+    @media (max-width: 1024px) {
+      min-height: 62vh;
+    }
+
+    @media (max-width: 768px) {
+      min-height: 36vh;
+    }
 
     @media (max-width: 475px) {
-      background: url('../images/bg-folder/mobile-main-bg.png') no-repeat center
-        top/cover;
-      padding: 0;
+      min-height: 31vh;
+    }
+
+    @media (max-width: 375px) {
+      min-height: 18vh;
     }
 
     .container {
       display: flex;
+      justify-content: space-around;
 
       @media (max-width: 475px) {
         flex-direction: row;
@@ -496,6 +560,8 @@ main {
         }
 
         &:first-child {
+          width: 50%;
+
           @media (max-width: 475px) {
             display: flex;
             align-items: center;
@@ -506,20 +572,28 @@ main {
           padding: 350px 0 0 150px;
           text-align: center;
 
-          @media (max-width: 1900px) {
-            padding: 200px 0 0 150px;
+          @media (max-width: 1800px) {
+            padding: 200px 0 0 0px;
           }
 
-          @media (max-width: 1480px) {
-            padding: 100px 0 0 100px;
+          @media (max-width: 1440px) {
+            padding: 250px 0 0 100px;
+          }
+
+          @media (max-width: 1024px) {
+            padding: 150px 0 0 20px;
+          }
+
+          @media (max-width: 768px) {
+            padding: 100px 0 0 20px;
           }
 
           @media (max-width: 475px) {
-            padding: 100px 10px;
+            padding: 50px 0 0 10px;
           }
 
-          img {
-            margin: 0 auto;
+          @media (max-width: 375px) {
+            padding: 30px 0 0 10px;
           }
 
           h1 {
@@ -528,8 +602,16 @@ main {
             font-weight: 200;
             padding: 50px 0;
 
-            @media (max-width: 1900px) {
+            @media (max-width: 1800px) {
               font-size: 36px;
+            }
+
+            @media (max-width: 1440px) {
+              padding: 20px 0;
+            }
+
+            @media (max-width: 1024px) {
+              font-size: 24px;
             }
 
             @media (max-width: 475px) {
@@ -564,14 +646,25 @@ main {
 
       @media (max-width: 475px) {
         flex-direction: column;
-        padding: 0;
+        padding: 30px 0 0 0;
       }
 
       .part {
         &:first-child {
-          @media (max-width: 1900px) {
-            display: flex;
-            align-items: center;
+          display: flex;
+          align-items: center;
+
+          iframe {
+            width: 560px;
+            height: 315px;
+
+            @media (max-width: 1800px) {
+              margin: 0 auto;
+            }
+
+            @media (max-width: 1440px) {
+              max-width: 100%;
+            }
           }
         }
 
@@ -595,6 +688,10 @@ main {
             color: #656565;
             padding: 50px 0;
 
+            @media (max-width: 475px) {
+              padding: 20px 0;
+            }
+
             span {
               font-weight: bold;
             }
@@ -615,12 +712,16 @@ main {
     padding: 100px 0;
     text-align: center;
 
+    @media (max-width: 1440px) {
+      padding: 70px 0;
+    }
+
     @media (max-width: 1024px) {
       padding: 50px 0;
     }
 
     @media (max-width: 475px) {
-      padding: 30px 0;
+      padding: 20px 0;
     }
 
     h3 {
@@ -635,6 +736,7 @@ main {
 
       @media (max-width: 1024px) {
         flex-wrap: wrap;
+        justify-content: space-around;
       }
 
       .standart-item {
@@ -647,7 +749,7 @@ main {
         }
 
         img {
-          @media (max-width: 1900px) {
+          @media (max-width: 1800px) {
             min-height: 200px;
           }
 
@@ -663,6 +765,14 @@ main {
           padding: 20px 0;
           color: #656565;
 
+          @media (max-width: 1440px) {
+            font-size: 20px;
+          }
+
+          @media (max-width: 768px) {
+            font-size: 16px;
+          }
+
           @media (max-width: 475px) {
             font-size: 10px;
           }
@@ -674,12 +784,20 @@ main {
   section#product {
     padding: 100px 0;
 
+    @media (max-width: 1440px) {
+      padding: 70px 0;
+    }
+
     @media (max-width: 475px) {
-      padding: 30px 0;
+      padding: 20px 0;
     }
 
     h2 {
       padding: 30px 0;
+
+      @media (max-width: 475px) {
+        padding: 10px 0;
+      }
     }
 
     .product-items-wrapper {
@@ -689,9 +807,13 @@ main {
       width: 90%;
       margin: 0 auto;
 
-      @media (max-width: 475px) {
+      @media (max-width: 768px) {
         width: 80%;
       }
+
+      // @media (max-width: 475px) {
+      //   width: 80%;
+      // }
 
       .slick-prev {
         &::before {
@@ -723,6 +845,7 @@ main {
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        border: 15px solid transparent;
 
         img {
           margin: auto;
@@ -740,8 +863,12 @@ main {
   section#trust_us {
     padding: 100px 0;
 
+    @media (max-width: 1440px) {
+      padding: 70px 0;
+    }
+
     @media (max-width: 475px) {
-      padding: 30px 0;
+      padding: 20px 0;
     }
 
     .container {
@@ -770,6 +897,10 @@ main {
           align-items: center;
           padding: 50px 0;
 
+          @media (max-width: 1800px) {
+            padding: 20px 0;
+          }
+
           @media (max-width: 1024px) {
             padding: 20px 0;
           }
@@ -784,7 +915,11 @@ main {
             }
 
             @media (max-width: 1024px) {
-              font-size: 24px;
+              font-size: 22px;
+            }
+
+            @media (max-width: 768px) {
+              font-size: 16px;
             }
 
             @media (max-width: 475px) {
@@ -803,7 +938,13 @@ main {
             justify-content: center;
 
             @media (max-width: 1024px) {
-              font-size: 160px;
+              font-size: 140px;
+              min-width: 120px;
+            }
+
+            @media (max-width: 768px) {
+              font-size: 80px;
+              min-width: 60px;
             }
 
             @media (max-width: 475px) {
@@ -816,8 +957,8 @@ main {
         &:last-child {
           padding: 100px 0;
 
-          @media (max-width: 1024px) {
-            padding: 0;
+          @media (max-width: 1800px) {
+            padding: 60px 0 0 0;
           }
         }
       }
@@ -837,12 +978,16 @@ main {
   section#expert_reviews {
     padding: 100px 0;
 
+    @media (max-width: 1440px) {
+      padding: 70px 0;
+    }
+
     @media (max-width: 1024px) {
       padding: 50px 0;
     }
 
     @media (max-width: 475px) {
-      padding: 30px 0;
+      padding: 20px 0;
     }
 
     .expert-review-item-wrapper {
@@ -894,7 +1039,7 @@ main {
         h3 {
           background: #ee1e5b;
           color: #fff;
-          font-size: 36px;
+          font-size: 28px;
 
           @media (max-width: 1024px) {
             font-size: 24px;
@@ -907,8 +1052,9 @@ main {
 
         p {
           text-align: center;
-          font-size: 28px;
+          font-size: 24px;
           color: #656565;
+
           @media (max-width: 1024px) {
             font-size: 18px;
           }
@@ -916,6 +1062,43 @@ main {
           @media (max-width: 475px) {
             font-size: 10px;
           }
+        }
+
+        .showtext {
+          color: #999;
+          cursor: pointer;
+          font-size: 28px;
+        }
+
+        .hiddentext {
+          transition: 0.3s;
+          opacity: 0;
+          visibility: hidden;
+          height: 1px;
+        }
+
+        .active1 {
+          opacity: 1;
+          visibility: visible;
+          height: auto;
+        }
+
+        .active2 {
+          opacity: 1;
+          visibility: visible;
+          height: auto;
+        }
+
+        .active3 {
+          opacity: 1;
+          visibility: visible;
+          height: auto;
+        }
+
+        #showtext2 {
+        }
+
+        #showtext3 {
         }
 
         img {
@@ -928,12 +1111,16 @@ main {
   section#registration {
     padding: 100px 0;
 
+    @media (max-width: 1440px) {
+      padding: 70px 0;
+    }
+
     @media (max-width: 1024px) {
       padding: 50px 0;
     }
 
     @media (max-width: 475px) {
-      padding: 30px 0;
+      padding: 20px 0;
     }
 
     h2 {
@@ -947,6 +1134,10 @@ main {
     .registration-info-wrapper {
       display: flex;
       justify-content: space-around;
+
+      @media (max-width: 475px) {
+        flex-direction: column-reverse;
+      }
 
       .part {
         width: 50%;
@@ -966,6 +1157,10 @@ main {
           @media (max-width: 1024px) {
             max-width: 70%;
           }
+
+          @media (max-width: 475px) {
+            display: none;
+          }
         }
 
         form {
@@ -977,15 +1172,17 @@ main {
           background: #fff;
           padding: 60px 60px 30px 60px;
 
-          @media (max-width: 1900px) {
+          @media (max-width: 1800px) {
             max-width: 95%;
           }
 
+          @media (max-width: 1440px) {
+            padding: 10px 60px 30px 60px;
+          }
+
           @media (max-width: 1024px) {
-            max-width: 100%;
             padding: 20px;
             border: 2px solid #00aca0;
-            min-width: 60vw;
           }
 
           .personal-wrapper {
@@ -1071,6 +1268,10 @@ main {
               font-size: 24px;
               text-align: right;
 
+              @media (max-width: 1024px) {
+                font-size: 16px;
+              }
+
               @media (max-width: 475px) {
                 font-size: 8px;
               }
@@ -1080,6 +1281,10 @@ main {
           label {
             font-size: 36px;
             color: #656565;
+
+            @media (max-width: 1024px) {
+              font-size: 22px;
+            }
 
             @media (max-width: 475px) {
               font-size: 10px;
@@ -1091,11 +1296,15 @@ main {
             border: 0;
             margin: 10px 0;
             padding: 15px 0;
+            text-align: center;
+            color: #fff;
+            font-size: 26px;
+            font-weight: 100;
 
             @media (max-width: 1024px) {
+              font-size: 22px;
               margin: 5px 0;
-              padding: 10px 0;
-              font-size: 10px;
+              padding: 5px 0;
             }
 
             &::placeholder {
@@ -1114,6 +1323,10 @@ main {
               color: #fff;
               font-size: 36px;
 
+              @media (max-width: 1024px) {
+                font-size: 22px;
+              }
+
               @media (max-width: 475px) {
                 font-size: 10px;
               }
@@ -1126,6 +1339,14 @@ main {
           padding: 20px 0;
           max-width: 730px;
 
+          @media (max-width: 1024px) {
+            font-size: 24px;
+          }
+
+          @media (max-width: 768px) {
+            font-size: 16px;
+          }
+
           @media (max-width: 475px) {
             font-size: 12px;
           }
@@ -1137,12 +1358,16 @@ main {
   section#events_reviews {
     padding: 100px 0;
 
+    @media (max-width: 1440px) {
+      padding: 70px 0;
+    }
+
     @media (max-width: 1024px) {
       padding: 50px 0;
     }
 
     @media (max-width: 475px) {
-      padding: 30px 0;
+      padding: 20px 0;
     }
 
     .container {
@@ -1156,12 +1381,16 @@ main {
         justify-content: space-between;
         width: 100%;
 
+        @media (max-width: 1024px) {
+          justify-content: center;
+        }
+
         @media (max-width: 475px) {
           flex-direction: row;
         }
 
         .event-item {
-          @media (max-width: 1900px) {
+          @media (max-width: 1800px) {
             img {
               max-width: 30%;
             }
@@ -1177,15 +1406,11 @@ main {
         .event-wrap {
           width: 33.333%;
 
-          @media (max-width: 1024px) {
-            width: 50%;
-          }
-
           &:nth-child(2) {
             padding: 120px 0 0 0;
 
-            @media (max-width: 1900px) {
-              padding: 80px 0 0 0;
+            @media (max-width: 1800px) {
+              padding: 40px 0 0 0;
             }
 
             @media (max-width: 1024px) {
@@ -1196,28 +1421,25 @@ main {
           &:nth-child(3) {
             padding: 240px 0 0 0;
 
-            @media (max-width: 1900px) {
-              padding: 180px 0 0 0;
+            @media (max-width: 1800px) {
+              padding: 150px 0 0 0;
             }
 
             @media (max-width: 1024px) {
-              padding: 30px 0;
+              padding: 0;
               width: 100%;
               display: flex;
+              justify-content: center;
 
               .event-item {
-                width: 50%;
+                width: 33.3333%;
               }
             }
 
             @media (max-width: 475px) {
-              padding: 0;
-
               .event-item {
-                width: 50%;
-
-                &:nth-child(2) {
-                  padding: 50px 0 0 0;
+                &:first-child {
+                  padding: 0;
                 }
               }
             }
@@ -1228,6 +1450,10 @@ main {
 
             &:nth-child(2) {
               padding: 60px 0 0 0;
+
+              @media (max-width: 475px) {
+                padding: 30px 0 0 0;
+              }
             }
 
             img {
@@ -1265,20 +1491,25 @@ main {
         width: 45%;
 
         img {
-          @media (max-width: 1900px) {
-            max-height: 70vh;
+          @media (max-width: 1800px) {
+            max-height: 90vh;
+            margin: 0 auto;
           }
         }
 
         h2 {
           font-size: 72px;
 
-          @media (max-width: 1900px) {
+          @media (max-width: 1800px) {
             font-size: 56px;
           }
 
           @media (max-width: 1024px) {
             font-size: 38px;
+          }
+
+          @media (max-width: 768px) {
+            font-size: 24px;
           }
 
           @media (max-width: 475px) {
@@ -1291,12 +1522,17 @@ main {
           padding: 40px 0;
           color: #656565;
 
-          @media (max-width: 1900px) {
+          @media (max-width: 1800px) {
             font-size: 34px;
           }
 
           @media (max-width: 1024px) {
             font-size: 24px;
+          }
+
+          @media (max-width: 768px) {
+            font-size: 16px;
+            padding: 20px 0;
           }
 
           @media (max-width: 475px) {
@@ -1321,7 +1557,7 @@ footer {
   background: url('../images/bg-folder/footer-bg.png') no-repeat center
     top/cover;
 
-  @media (max-width: 1900px) {
+  @media (max-width: 1800px) {
     padding: 80px 0;
   }
 
@@ -1350,25 +1586,36 @@ footer {
 
     .footer-item-wrapper {
       display: flex;
-      justify-content: flex-end;
+      justify-content: space-between;
       width: 100%;
       margin: auto;
 
       @media (max-width: 1024px) {
-        justify-content: space-between;
+        justify-content: center;
       }
 
       .first-item {
         display: flex;
+        justify-content: space-between;
+        width: 70%;
+
+        @media (max-width: 1024px) {
+          flex-direction: column;
+          width: 50%;
+        }
 
         @media (max-width: 475px) {
-          flex-direction: column;
+          width: 70%;
         }
 
         .footer-item {
           width: 50%;
 
-          @media (max-width: 475px) {
+          &:last-child {
+            padding: 0 0 8% 0;
+          }
+
+          @media (max-width: 1024px) {
             width: 100%;
           }
         }
