--- a/faberlick/assets/css/style.css
+++ b/faberlick/assets/css/style.css
@@ -788,6 +788,9 @@ main section#main .container .part:last-child {
     padding: 30px 0 0 10px;
   }
 }
+main section#main .container .part:last-child img {
+  margin: 0 auto;
+}
 main section#main .container .part:last-child h1 {
   color: #fff;
   font-size: 48px;
