--- a/faberlick/scss/style.scss
+++ b/faberlick/scss/style.scss
@@ -596,6 +596,10 @@ main {
             padding: 30px 0 0 10px;
           }
 
+          img {
+            margin: 0 auto;
+          }
+
           h1 {
             color: #fff;
             font-size: 48px;
