--- a/faberlick/assets/css/style.css
+++ b/faberlick/assets/css/style.css
@@ -1251,7 +1251,17 @@ main section#expert_reviews .expert-review-item-wrapper .expert-review-item p {
 main section#expert_reviews .expert-review-item-wrapper .expert-review-item .showtext {
   color: #999;
   cursor: pointer;
-  font-size: 28px;
+  font-size: 22px;
+}
+@media (max-width: 1024px) {
+  main section#expert_reviews .expert-review-item-wrapper .expert-review-item .showtext {
+    font-size: 18px;
+  }
+}
+@media (max-width: 475px) {
+  main section#expert_reviews .expert-review-item-wrapper .expert-review-item .showtext {
+    font-size: 10px;
+  }
 }
 main section#expert_reviews .expert-review-item-wrapper .expert-review-item .hiddentext {
   transition: 0.3s;
@@ -1599,7 +1609,7 @@ main section#events_reviews .container .events-item-wrapper .event-wrap:nth-chil
 }
 @media (max-width: 1024px) {
   main section#events_reviews .container .events-item-wrapper .event-wrap:nth-child(3) {
-    padding: 0;
+    padding: 0 0 30px 0;
     width: 100%;
     display: flex;
     justify-content: center;
