--- a/faberlick/scss/style.scss
+++ b/faberlick/scss/style.scss
@@ -6,6 +6,10 @@
   scroll-behavior: smooth;
 }
 
+input {
+  -webkit-appearance: none;
+}
+
 ::-webkit-scrollbar {
   width: 0px;
   background: rgba(255, 255, 255, 0);
