--- a/faberlick/assets/css/style.css
+++ b/faberlick/assets/css/style.css
@@ -222,8 +222,12 @@ span,
   scroll-behavior: smooth;
 }
 
-input {
+textarea,
+input[type=text],
+input[type=button],
+input[type=submit] {
   -webkit-appearance: none;
+  border-radius: 0;
 }
 
 ::-webkit-scrollbar {
