--- a/faberlick/scss/style.scss
+++ b/faberlick/scss/style.scss
@@ -6,8 +6,12 @@
   scroll-behavior: smooth;
 }
 
-input {
-  -webkit-appearance: none;
+textarea,
+input[type="text"],
+input[type="button"],
+input[type="submit"] {
+     -webkit-appearance: none;
+     border-radius: 0;
 }
 
 ::-webkit-scrollbar {
