--- a/faberlick/scss/style.scss
+++ b/faberlick/scss/style.scss
@@ -10,8 +10,8 @@ textarea,
 input[type="text"],
 input[type="button"],
 input[type="submit"] {
-     -webkit-appearance: none;
-     border-radius: 0;
+     -webkit-appearance: none !important;
+     border-radius: 0 !important;
 }
 
 ::-webkit-scrollbar {
